Bug 291162 - amarok dynamic play list with biases EchoNest similar artist gives no results
Summary: amarok dynamic play list with biases EchoNest similar artist gives no results
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: 2.5.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 297609 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-10 13:17 UTC by Martin Steigerwald
Modified: 2013-01-03 15:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Steigerwald 2012-01-10 13:17:03 UTC
Version:           2.5 (using KDE 4.7.4) 
OS:                Linux

According to

[Bug 184455] New: last played playlist filter should allow to set greater than x days

I created a dynamic playlist with

* Match meta tag: Last Played
   * with older than 21 days
   * which gives me lastplay:>21d

(It is not necessary to add in random bias additionally as I found out.)

Now Amarok finds songs and fills the dynamic playlist. When playback progresses it adds new titles from its larger list.


Reproducible: Always

Steps to Reproduce:
Now when I change this too:

* Match All
  * Echo Nest similar artist
     * like last played song
     * or like any song in playlist
     * I tried both
  * Match meta tag: Last Played
     * with older than 21 days
     * which gives my lastplay:>21d
with a playlist with at least 15 entries shown…

Actual Results:  
… Amarok stops adding new artists.

When I refill the list it doesn´t fill it up to 10 new entries as well.

When I create a new dynamic playlist with just

  * Echo Nest similar artist
     * like last played song
     * or like any song in playlist
     * I tried both

I also do not get any new entries into the playlist.

Even when I manually trag part of some album or even lots more of songs into the playlist and use similar artist like any song in playlist I do not get any songs into the playlist.

Does the EchoNest stuff needs some additional setup? It is possible to influence how similar the songs should be? I think I gave it quite some obvious ways to find similar artists.

Expected Results:  
Amarok adds new songs from similar artists like it has worked in the Amarok 1.x days with Last.fm similar stuff.
Comment 1 Myriam Schweingruber 2012-01-10 23:49:33 UTC
I think something has changed with EchoNest recently which was not implemented yet on our side.
Comment 2 Myriam Schweingruber 2012-04-08 11:52:07 UTC
*** Bug 297609 has been marked as a duplicate of this bug. ***
Comment 3 Matěj Laitl 2013-01-02 09:57:35 UTC
FIxed by Ralf, commit hooks were apparently disabled when he pushed. :-(
Comment 4 Martin Steigerwald 2013-01-03 15:09:20 UTC
Thank you, Ralf and Matěj.