amarok dynamic play list with biases EchoNest similar artist gives no results

Fix several issues:
- not telling echonest that we want xml instead of json
- fixing handling of invalid responses
- updating decoding of results
- get rid of unneeded artist id queries
- add required echonest web address

BUG: 291162
FIXED-IN: 2.7